<resources>
    <!-- systemic -->
    <string name="app_name">Building Calculator</string>
    <string name="loadingText">Добро пожаловать!</string>
    <string name="exit_message">Нажмите еще раз чтобы выйти</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="customer">Заказчик</string>

    <!-- fonts -->
    <string name="roboto_medium">fonts/robotoMedium.ttf</string>
    <string name="roboto_regular">fonts/robotoRegular.ttf</string>
    <string name="roboto_italic">fonts/robotoItalic.ttf</string>
    <string name="roboto_medium_italic">fonts/robotoMediumItalic.ttf</string>

    <!-- registration, signIn, logIn, resetPassword -->
    <string name="log_In">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="register">Зарегистрироваться</string>
    <string name="signIn">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="without_registration">Продолжить без регистрации</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="empty_space"> </string>
    <string name="role">Роль</string>
    <string name="forgot_password_msg">Введите почту, которую указывали при регистрации. Вам придет письмо с дальнейшими инструкциями.</string>
    <string name="reset_password">Сменить пароль</string>
    <string name="password_change_instruction">На вашу почту отправлена инструкция для смены пароля!</string>
    <string name="changing_password_error">Ошибка! Проверьте свою почту!</string>
    <string name="email_error">Please enter your email</string>
    <string name="password_error">Please enter your password</string>
    <string name="role_error">Please choose role</string>
    <string name="error_register">Ошибка регистрации</string>
    <string name="error_log_in">Ошибка входа! Проверьте почту и пароль!</string>

    <string-array name="role_items">
        <item>Заказчик</item>
        <item>Исполнитель</item>
    </string-array>

    <!-- main Menu-->
    <string name="calculator">Калькулятор</string>
    <string name="calculation_of_works">Расчет работ</string>
    <string name="calculation_of_materials">Расчет\nматериалов</string>
    <string name="calculation_of_materials_one_line">Расчет материалов</string>
    <string name="menu">Меню</string>
    <string name="profile">Профиль</string>
    <string name="my_projects">Мои проекты</string>

    <!-- simple_calculator-->
    <string name="ac_on_calculator">AC</string>
    <string name="c_on_calculator">C</string>
    <string name="percent_on_calculator">%</string>
    <string name="division_on_calculator">÷</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="multiplication_on_calculator">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtraction_on_calculator">−</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus_on_calculator">+</string>
    <string name="other_on_calculator">︙</string>
    <string name="zero">0</string>
    <string name="point_on_calculator">.</string>
    <string name="equals_on_calculator">꓿</string>


    <!-- profile-->
    <string name="personal_data">Персональные данные</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="telephone">Телефон</string>
    <string name="legalStatus">Статус</string>
    <string name="name_of_firm">Название фирмы</string>
    <string name="address">Адрес</string>
    <string name="qty_of_workers">Кол-во работников</string>
    <string name="qty_of_completed_projects">Кол-во выполненых проектов</string>
    <string name="create_profile">Создание профиля</string>
    <string name="edit_profile">Редактирование профиля</string>
    <string name="enter_surname">Введите фамилию</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_patronymic">Введите отчество</string>
    <string name="enter_telephone">Введите телефон</string>
    <string name="enter_email">Введите email</string>
    <string name="enter_status">Выберете статус</string>
    <string name="enter_name_of_firm">Введите название фирмы</string>

    <string name="enter_title">Введите название</string>
    <string name="enter_qty">Введите кол-во</string>
    <string name="enter_price_per_unit">Введите цену за ед.</string>
    <string name="enter_address">Введите адрес</string>
    <string name="enter_qty_workers">Введите кол-во работников</string>
    <string name="enter_qty_completed_projects">Введите кол-во выполненых проектов</string>

    <string-array name="status_items">
        <item>Юр.лицо</item>
        <item>Физ.лицо</item>
    </string-array>

    <string-array name="units">
        <item>М2</item>
        <item>СМ2</item>
        <item>ШТ</item>
    </string-array>


    <string name="save_people_error">Ошибка сохранения профиля</string>







    <string name="search_category_of_works">Поиск по категориям работ…</string>
    <string name="search_category_of_materials">Поиск по категориям материалов…</string>
    <string name="search_of_works">Поиск работы…</string>
    <string name="units">Единицы\nизмерения</string>
    <string name="qty">Кол-во</string>
    <string name="unit_price">Цена за ед.</string>
    <string name="title">Название</string>
    <string name="total_price">Итоговая\nстоимость:</string>
    <string name="calculating">Рассчитать</string>
    <string name="save_as">Сохранить как …</string>
    <string name="add_to_project">Добавить в\nпроект</string>
    <string name="add_material">материал</string>
    <string name="sum">Сумма</string>
    <string name="enter_qty_of_workers">Введите кол-во работников</string>
    <string name="qty_of_works">Кол-во работ</string>
    <string name="enter_date_of_create">Введите дату создания</string>
    <string name="enter_date_of_end">Введите дату окончания</string>
    <string name="date_of_create">Дата создания</string>
    <string name="add_work">работа</string>
    <string name="add_customer">заказчик</string>
    <string name="add_materials">материалы</string>
    <string name="customer_identification_number">Введите уникальный номер заказчика</string>
    <string name="find_customer">Найти заказчика</string>
    <string name="information_about_project">Информация о проекте</string>
    <string name="list_of_works">Список работ</string>
    <string name="list_of_materials">Список материалов</string>

    <string name="create_project">Создание проекта</string>
    <string name="edit_project">Редактирование проекта</string>
    <string name="status">Статус</string>
    <string name="total_project_price">Общая стоимость проекта</string>
    <string name="end_date">Дата окончания</string>
    <string name="create_report">Создать отчет</string>
    <string name="number_of_materials">Количество материалов</string>

    <string name="report_about_materials">Отчет по материалам</string>
    <string name="file_extension">.xls</string>
    <string name="space">\"  \"</string>
    <string name="word_work_in_order">\"работа - \"</string>
    <string-array name="material_report">
        <item>Название</item>
        <item>Кол-во</item>
        <item>Цена за ед.</item>
        <item>Ед. измерения</item>
        <item>Итоговая стоимость</item>
        <item>Итого:</item>
    </string-array>

</resources>